[tool.poetry]
name = "exotools"
version = "0.1.0"
description = ""
authors = ["GBMitev <georgibogdanovmitev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
numpy = "^1.26.3"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
